完成了Money的Css和Html

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -14,6 +14,7 @@ $white-rgba:rgba(255,255,255,0.8);
 $blue:#007EE5;
 $white:#ecfbfc;
 $gray:#323232;
+$number-pad:#c4c4c4;
 //
 %clearFix {
   &::after {
