完成了EditLabel的样式

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -51,6 +51,15 @@ $color-shadow: rgba(0, 0, 0, 0.3);
 //App.vue
 $body-bg:#e6e6e6;
 
+//navBar
+%navBar {
+  box-shadow: 0 0 3px $color-shadow;
+  max-height: 70px;
+  background-color: $blue;
+  padding: 22px 0 22px 0;
+  color: $white;
+}
+
 
 
 
