--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -4,15 +4,33 @@ $font-hei: -apple-system, "Noto Sans", "Helvetica Neue", Helvetica, "Nimbus Sans
 $font-kai: Baskerville, Georgia, "Liberation Serif", "Kaiti SC", STKaiti, "AR PL UKai CN", "AR PL UKai HK", "AR PL UKai TW", "AR PL UKai TW MBE", "AR PL KaitiM GB", KaiTi, KaiTi_GB2312, DFKai-SB, "TW\-Kai", serif;
 //宋体
 $font-song: Georgia, "Nimbus Roman No9 L", "Songti SC", "Noto Serif CJK SC", "Source Han Serif SC", "Source Han Serif CN", STSong, "AR PL New Sung", "AR PL SungtiL GB", NSimSun, SimSun, "TW\-Sung", "WenQuanYi Bitmap Song", "AR PL UMing CN", "AR PL UMing HK", "AR PL UMing TW", "AR PL UMing TW MBE", PMingLiU, MingLiU, serif;
+//
+h1,h2,h3,h4,h5,h6{
+  font-weight: normal;
+}
+//box shadow
+$color-shadow: rgba(0, 0, 0, 0.3);
+%outerShadow {
+  box-shadow: 0 0 3px $color-shadow;
+}
+%innerShadow {
+  box-shadow: inset 0 -3px 3px -3px $color-shadow,
+  inset 0 3px 3px -3px $color-shadow;
+}
+//
+$layout-bg:#FFF5D6;
+
+
+// nav组件和amount 背景色
+$nav-bg:#007EE5;
+$nav-color:#ecfbfc;
+$nav-icon-selected:black;
+
 //nav 高亮警告
 $color-highlight: #f00;
 // 全局字体颜色-淡灰
 $font-color:#344A5F;
 //
-h1,h2,h3,h4,h5,h6{
-  font-weight: normal;
-}
-
 
 //Money amount color
 $rgba:rgba(0,0,0,0.1);
@@ -45,14 +63,7 @@ $g:1px solid black;
     display: block;
   }
 }
-$color-shadow: rgba(0, 0, 0, 0.3);
-%outerShadow {
-  box-shadow: 0 0 3px $color-shadow;
-}
-%innerShadow {
-  box-shadow: inset 0 -3px 3px -3px $color-shadow,
-  inset 0 3px 3px -3px $color-shadow;
-}
+
 
 //App.vue
 $body-bg:#e6e6e6;
@@ -65,7 +76,12 @@ $body-bg:#e6e6e6;
   color: $white;
 }
 
+//label
+$font-color: black;
+//labels  background
+%labels-background {
 
+}
 
 
 
